--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
     margin: 10px;
   }
   
-  /*.box {
+  .box {
     background-color: steelblue;
     color: #fff;
     display: flex;
@@ -30,12 +30,12 @@ body {
     margin: 10px;
     border-radius: 10px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
-    transform: translateX(400%);
+    transform: translateX(-100%);
     transition: transform 0.4s ease;
   }
   
   .box:nth-of-type(even) {
-    transform: translateX(-400%);
+    transform: translateX(-100%);
   }
   
   .box.show {
